# latent-logic

./: .gitignore  README.md  evaluation_utils.py  prompts.json  pyproject.toml
docs/: EVALUATION_GLOSSARY.md  EVALUATION_PLAN.md  MODEL_INSIGHTS.md  RESULTS_REVIEW_GUIDE.md  TECHNICAL_NOTES.md
gemini/: agent.py  fileTools.py  listmodels.py  scratchAgentStep1.py  scratchAgentStep2.py  scratchAgentStep3.py  scratchAgentStep4.py
scratch_foundry/: __init__.py  fileTools.py  foundryAgent.py  httpAgent.py  http_tool.py  run_evaluation.py
scripts/: ReAct-AgentFromScratch.ipynb  build_llm_analysis_package.py  canonical_check.py  compare_framework_runs.py  export_comparison_tables.py  generate_model_insights_block.py
strands_foundry/: __init__.py  foundry_strands_basic.py  foundry_strands_http.py  run_strands_evaluation.py
strands_foundry/customprovider/: __init__.py  errors.py  foundry_model.py  message_format.py
